# hwpio

./: .gitignore  .mailmap  CHANGELOG.md  CHANGELOG_EN.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  THIRD_PARTY_LICENSES.md  UPSTREAM_PR.md  index.html  manifest.webmanifest  rhwp.js  sw.js
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
HanPage-Desktop/: README.md  package-lock.json  package.json
HanPage-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
HanPage-Desktop/src-tauri/capabilities/: default.json
HanPage-Desktop/src-tauri/src/: lib.rs  main.rs
assets/: canvaskit-renderer-D1_eYiTf.js  index-BS-uUND4.css  index-C2RHAasd.js
bindings/: README.md
docs/: text-ir-v2.md
examples/: diag_1139_para_shape.rs  diag_836.rs  diag_927_reflow.rs  hwpx_dump_text.rs  inspect_574.rs  inspect_595.rs  inspect_595_regression.rs  inspect_658_selection.rs  inspect_705.rs  inspect_pr601.rs  inspect_task671.rs  inspect_task671_v2.rs  inspect_task672.rs  pr599_png_gateway.rs  scan_cell_pagehide.rs
fonts/: OFL.txt
mydocs/: pr_body_draft_1151.md
npm/: README.md
pdf/: README.md  _convert.ps1  _watchdog.ps1
rhwp-chrome/: PRIVACY.md  README.md  build.mjs  content-script.css  content-script.js  dev-tools-inject.js  manifest.json  options.html  options.js  package-lock.json  package.json
rhwp-desktop/: README.md  package-lock.json  package.json
rhwp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rhwp-desktop/src-tauri/icons/: icon.icns
rhwp-desktop/src-tauri/src/: lib.rs
rhwp-firefox/: PRIVACY.md  README.md  background.js  build.mjs  content-script.js  dev-tools-inject.js  manifest.json  options.js  package-lock.json  package.json
rhwp-safari/: build.sh
rhwp-studio/: index.html  package-lock.json  package.json  vite-plugin-yangsik-fragments.ts  vite.config.ts
rhwp-vscode/: CHANGELOG.md  README.md  package.json
samples/: [2027] 온새미로 1 본교재.hwp  hwp3-sample16-hwp5-2022.hwp  계획서.hwp
saved/: 04-blank_hwpx_empty.hwpx  111exam_social.hwp
scripts/: renderer_baseline.py  task1274_visual_sweep.py
src/: error.rs  lib.rs  main.rs  wasm_api.rs
tests/: diag_1042_2022.rs  diag_1042_2024_reverse.rs  diag_1042_height_calc.rs  diag_1042_hwp3_vs_hwp5_paragraph.rs  diag_1042_hwp_summary.rs  diag_1042_normal_vs_abnormal.rs  diag_1042_pi162_attr1.rs  diag_1042_raw_binary.rs  diag_1042_trailing.rs  (+65 more)
(+1246 files in other folders)
