[package]
name = "rhwp-desktop"
version = "0.7.14"
description = "HanPage desktop application (Tauri shell wrapping rhwp-studio + WASM)"
authors = ["paldyn"]
edition = "2021"
license = "MIT"
repository = "https://github.com/paldyn/HanPage"

# rhwp-desktop은 독립 크레이트다. 저장소 루트 Cargo.toml에는 [workspace] 섹션이
# 없으므로 루트 `cargo build`는 `rhwp` 크레이트만 빌드하며 아래 Tauri 의존성을
# 절대 끌어오지 않는다. 이 크레이트를 포착하는 루트 [workspace]를 신설하지 말 것
# (WASM/네이티브 빌드에 영향을 주게 된다).

[lib]
name = "rhwp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# [Task #1 Stage 2] 네이티브 열기/저장 dialog. Rust 측에서만 호출하므로 JS ACL
# 권한(dialog:*)이나 tauri-plugin-fs 는 불필요하다(파일 IO 는 std::fs).
tauri-plugin-dialog = "2"
# [Task #1 Stage 3] 최근 문서 영속화(store)·창 상태 저장/복원(window-state)·
# 단일 인스턴스(single-instance, Win/Linux 파일 연결 argv 캡처). 모두 Rust 측에서만
# 사용하므로 JS ACL 권한 추가가 불필요하다(core:default 유지).
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# single-instance 는 desktop(non-mobile)에서만. Win/Linux 의 파일 연결은 2번째
# 실행 argv 로 전달되므로 이를 캡처해 기존 창으로 넘긴다(macOS 는 RunEvent::Opened 사용).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
